--- a/info.plist
+++ b/info.plist
@@ -97,7 +97,7 @@
 				<key>scriptfile</key>
 				<string></string>
 				<key>subtext</key>
-				<string>Searching...</string>
+				<string></string>
 				<key>title</key>
 				<string>查快递</string>
 				<key>type</key>
