--- a/info.plist
+++ b/info.plist
@@ -158,15 +158,15 @@
 	</dict>
 	<key>variables</key>
 	<dict>
-		<key>API_KEY</key>
+		<key>APP_KEY</key>
 		<string>9840c89040f56003</string>
 	</dict>
 	<key>variablesdontexport</key>
 	<array>
-		<string>API_KEY</string>
+		<string>APP_KEY</string>
 	</array>
 	<key>version</key>
-	<string></string>
+	<string>1.0.0</string>
 	<key>webaddress</key>
 	<string>https://github.com/xuniaoji/alfred-express</string>
 </dict>
